# ansible-keyring

./: README.md  Taskfile.yml  package.json  pnpm-lock.yaml  pyproject.toml
.config/: Dockerfile  requirements.txt  variables.json
.config/brew/: binary.rb
.config/docs/: package.json  pyproject.toml
docs/: CHANGELOG.md  CONTRIBUTING.md
local/: install.sh  package-lock.json  pyproject.partial.toml  requirements.txt
local/slim/: exe.txt  install.txt
