[tool]
[tool.poetry]
name = "ansible-keyring"
version = "0.3.0"
description = "Keyring integration and local execution wrappers for Ansible"
license = "MIT"
keywords = ["ansible", "local", "keyring", "tools", "wrapper", "system"]
classifiers = ["Development Status :: 4 - Beta", "Environment :: Console", "Intended Audience :: System Administrators", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.5", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8", "Topic :: System :: Systems Administration"]
homepage = "https://github.com/lvillani/ansible-tools"
authors = ["Lorenzo Villani <lorenzo@villani.me>"]
readme = "README.md"
packages = [
    { include = "ansible-keyring" }
]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
keyring = "^23.5.0"
passlib = "^1.7.4"

[tool.poetry.scripts]
ansible-local = 'ansible-keyring.cli.ansible_local:main'
ansible-mkpasswd = 'ansible-keyring.cli.ansible_mkpasswd:main'
ansible-vault-helper = 'ansible-keyring.cli.ansible_vault_helper:main'
vaultify = 'ansible-keyring.cli.vaultify:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"